# Drawpat

./: .gitignore  CMake - error.txt  CMakeLists.txt  DrawingArea.cpp  DrawingArea.h  DrawingView.h  Drawpat.pro  Drawpat_ro_RO.ts  EditorModule.cpp  EditorModule.h  Events.h  MainLayout.cpp  MainLayout.h  MainWindow.cpp  MainWindow.h  Mainwindow.cpp  Mainwindow.h  main.cpp
Application/: CMakeLists.txt  main.cpp  resources.qrc
Application/EditorModule/: CMakeLists.txt  DrawingView.cpp  DrawingView.h  EditorModule.cpp  EditorModule.h  EditorView.cpp  EditorView.h  Events.cpp  Events.h  Logger.cpp  Logger.h  TextEditor.cpp  TextEditor.h
Application/EditorModule/Tests/: CMakeLists.txt
Application/EditorModule/Tests/DrawingViewTests/: CMakeLists.txt  DrawingViewTests.cpp  DrawingViewTests.h
Application/EditorModule/Tests/EventsTests/: CMakeLists.txt  EventsTests.cpp  EventsTests.h
Application/EditorModule/Tests/TextEditorTests/: CMakeLists.txt  TextEditorTests.cpp  TextEditorTests.h
Application/Icons/: resources.qrc
Application/MainWindow/: ApplicationWindow.cpp  ApplicationWindow.h  CMakeLists.txt  MainLayout.cpp  MainLayout.h  MainWindow.cpp  Mainwindow.h  MakeLists.txt  WindowContainer.cpp  WindowContainer.h
Application/Misc/: Constants.cpp  Constants.h
Application/Resources/: resources.qrc
ApplicationWindow/: ApplicationWindow.cpp  ApplicationWindow.h  CMakeLists.txt  WindowContainer.cpp  WindowContainer.h  main.cpp
ApplicationWindow/Resources/: resources.qrc
ClientSimulator/: CMakeLists.txt  ClientSimulator.cpp  ClientSimulator.h  Constants.h  Menu.h  main.cpp
ClientSimulator/Tests/: CMakeLists.txt
Components/: CMakeLists.txt  CompaniesWrapper.cpp  CompaniesWrapper.h  Company.cpp  Company.h  DocumentContainer.cpp  DocumentContainer.h  Programmer.cpp  Programmer.h  ProgrammersWrapper.cpp  ProgrammersWrapper.h  ResourceManipulation.cpp  ResourceManipulation.h
EditorModule/: CMakeLists.txt  EditorModule.cpp  EditorModule.h  EditorView.cpp  EditorView.h  Events.cpp  Events.h  ImageEditor.cpp  ImageEditor.h  Logger.cpp  Logger.h  TextEditor.cpp  TextEditor.h
Misc/: Constants.cpp
Network/: CMakeLists.txt  HttpClient.cpp  HttpClient.h  JsonDeserializer.cpp  JsonDeserializer.h  NetworkModule.cpp  NetworkModule.h  RestController.cpp  RestController.h
Network/HttpClientModule/: HttpClient.cpp  HttpClient.h  JsonDeserializer.cpp  JsonDeserializer.h  NetworkModule.cpp  NetworkModule.h  RestController.cpp  RestController.h
Network/ResourceManipulationModule/: CompaniesWrapper.cpp  CompaniesWrapper.h  Company.cpp  Company.h  Programmer.cpp  Programmer.h  ProgrammersWrapper.cpp  ProgrammersWrapper.h  ResourceManipulation.cpp  ResourceManipulation.h
PaintingManager/: CMakeLists.txt  CommonTypes.h  ImageController.cpp  ImageController.h  ImageText.h  PaintingManager.cpp  PaintingManager.h  RectangleSelectionOperator.cpp  RectangleSelectionOperator.h  ShapeOperator.h  ShapeSharing.h
